# MAVNET_Fast

./: .gitignore  README.md
AC/: CMakeLists.txt  todo.txt
AC/config_avrlib/: CMakeLists.txt  blinker_config.h  display_config.h  pwm_config.h  timer_config.h  uart_config.h
AC/src/: CMakeLists.txt  blinker.c  blinker.h  blinker_config.h  defs.h  display.c  display.h  display_config.h  main.c  timer.c  timer.h  uart.c  uart.h  uart_config.h
FTPSync/: CMakeLists.txt  CMakeSettings.json
FTPSync/FTPSync/: AppState.h  CMakeLists.txt  CommandParser.cpp  CommandParser.h  Error.h  FTPConnection.cpp  FTPConnection.h  FTPSync.cpp  FTPSync.h  FileInterface.h  FileList.h  FileProcessor.cpp  FileProcessor.h  FileProcessorLocal.cpp  FileProcessorLocal.h  FileProcessorRemote.cpp  FileProcessorRemote.h  FileUtil.cpp  FileUtil.h  MessagePrinter.cpp  MessagePrinter.h
FTPSync/FtpClient/: BlockingSocket.cpp  BlockingSocket.h  CMakeLists.txt  Definements.h  FTPClient.cpp  FTPClient.h
FTPSync/scripts/: FTPSync.bat  FTPSync.sh  FTPSync_pull.bat  FTPSync_pull.sh  FTPSync_push.bat  FTPSync_push.sh
JadeEngine/: CMakeLists.txt  JadeEngine.sln  jadeEngine.sublime-project
JadeEngine/JadeEngine/: JadeEngine.vcxproj  JadeEngine.vcxproj.filters
JadeEngine/JadeEngine/Debug/: vc141.idb
JadeEngine/JadeEngine/Debug/JadeEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  JadeEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
JadeEngine/JadeEngine/Src/Core/: CoreIncludes.h
JadeEngine/resources/misc/: icon.tga
JadeEngine/scripts/: build.py
JadeEngine/src/: CMakeLists.txt  engine.cpp  engine.h  fundamental.h  global.h
JadeEngine/src/data/: array.h  bit_array.h  data.h  static_array.h  static_bit_array.h  static_stack.h  string.cpp  string.h
JadeEngine/src/draw/: CMakeLists.txt  renderer.cpp  renderer.h
JadeEngine/src/draw/gpu/: dev.cpp  dev.h  device.cpp  device.h  factory.cpp  factory.h  gpu.cpp  gpu.h  gpu_params.h  params.cpp  params.h  pass.cpp  pass.h  presenter.cpp  presenter.h  pso.cpp  pso.h  shader.cpp  shader.h  texture.cpp  texture.h
JadeEngine/src/fs/: file.cpp  file.h  system.h
JadeEngine/src/math/: check.h  color.h  constants.h  interp.h  ivec.h  limits.h  mat.h  rand.cpp  rand.h  sc.cpp  sc.h  scalar.cpp  scalar.h  vec.h
JadeEngine/src/mem/: allocatable.cpp  allocatable.h  base_allocator.cpp  base_allocator.h  constant_allocator.cpp  constant_allocator.h  general_purpose_allocator.cpp  general_purpose_allocator.h  linear_allocator.cpp  linear_allocator.h  mem_manager.cpp  mem_manager.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h  std_wrapper.cpp  std_wrapper.h  system_allocator.cpp  system_allocator.h
JadeEngine/src/platf/: message_box.h  platf.h  stack_tracer.cpp  stack_tracer.h
JadeEngine/src/platf/linux/: main.cpp  platf_linux.cpp  platf_linux.h  stack_tracer_linux.cpp
JadeEngine/src/platf/windows/: message_box_windows.cpp  platf_windows.cpp  platf_windows.h  stack_tracer_windows.cpp
JadeEngine/src/platform/: CMakeLists.txt  platform.h  stack_tracer.cpp  stack_tracer.h
JadeEngine/src/platform/linux/: global_linux.h  platform.h
JadeEngine/src/platform/windows/: CMakeLists.txt  global.h  global_windows.h  main.cpp  platform.cpp  platform.h  stack_tracer_windows.cpp
JadeEngine/src/tests/: tests.cpp  tests.h
JadeEngine/src/thread/: thread.cpp  thread.h
JadeEngine/src/util/: assertion.cpp  assertion.h  message_box.h  misc.cpp  misc.h  stack_tracer.cpp  stack_tracer.h  struct_hash.h
JadeEngine/src/window/: message.cpp  message.h  window.cpp  window.h
JadeEngine/tools/scripts/: clean_build.py  cook.py  generate_vscode_files.py
JadeEngine/tools/scripts/modules/: utils.py
VulkanTutorialApp/VulkanTutorialApp/: CMakeLists.txt  Sampler.h  VulkanTutorialApp.vcxproj  VulkanTutorialApp.vcxproj.filters
VulkanTutorialApp/VulkanTutorialApp/Core/: CMakeLists.txt  Camera.cpp  Camera.h  Fog.cpp  Fog.h  GlobalIncludes.cpp  GlobalIncludes.h  HelloTriangle.cpp  HelloTriangle.h  LightDirectional.cpp  LightDirectional.h  ManagerUid.cpp  ManagerUid.h  Timer.cpp  Timer.h  Timer_LINUX.cpp  Timer_WINDOWS.cpp  main.cpp
VulkanTutorialApp/VulkanTutorialApp/Core/resource/: CMakeLists.txt  ResourceCache.h  ResourceManager.cpp  ResourceManager.h
VulkanTutorialApp/VulkanTutorialApp/GOM/: CMakeLists.txt  Entity.cpp  Entity.h  GlobalWorldParameters.cpp  GlobalWorldParameters.h  World.cpp  World.h
VulkanTutorialApp/VulkanTutorialApp/GOM/system/: CMakeLists.txt  Drawable.cpp  Drawable.h  Rotator.cpp  Rotator.h  System.cpp  System.h  Transform.cpp  Transform.h
VulkanTutorialApp/VulkanTutorialApp/Rendering/: CMakeLists.txt  Camera.cpp  Camera.h  DescriptorCommon.cpp  DescriptorCommon.h  DescriptorDefines.h  DescriptorSet.cpp  DescriptorSet.h  Fog.cpp  Fog.h  Framebuffer.cpp  Framebuffer.h  Helper.cpp  Helper.h  LightDirectional.cpp  LightDirectional.h  Manager.h  ManagerDescriptor.cpp  ManagerDescriptor.h  ManagerSampler.cpp  ManagerSampler.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderState.cpp  RenderState.h  Resource.h  ResourceCommon.cpp  ResourceCommon.h  Sampler.cpp  Sampler.h  SamplerManager.cpp  SamplerManager.h  Shader.cpp  Shader.h  SystemDrawable.cpp  SystemDrawable.h  (+5 more)
VulkanTutorialApp/VulkanTutorialApp/Rendering/command/: CMakeLists.txt  SecondaryCommandBuffer.cpp  SecondaryCommandBuffer.h
VulkanTutorialApp/VulkanTutorialApp/Rendering/descriptor/: CMakeLists.txt  DescriptorCommon.h  DescriptorSet.cpp  DescriptorSet.h  (+2 more)
VulkanTutorialApp/VulkanTutorialApp/Scripts/: CompileShaders.bat
VulkanTutorialApp/VulkanTutorialApp/Util/: CMakeLists.txt  GlobalIncludes.h  ObjectPool.h  Property.h  Random.cpp  Random.h  Singleton.h  StaticArray.h
avrlib/: CMakeLists.txt
avrlib/config_default/: CMakeLists.txt  pwm_config.h  timer_config.h
avrlib/include/: CMakeLists.txt  avrlib.h  blinker.h  cmd_buffer.h  defs.h  display.h  entry_point.h  pwm.h  timer.h  uart.h
avrlib/src/: CMakeLists.txt  blinker.c  cmd_buffer.c  display.c  pwm.c  timer.c  uart.c
(+290 files in other folders)
